--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,3 +1,5 @@
 <h3>Formulaire de création d'un restaurant</h3>
 
 <%= render 'form', restaurant: @restaurant %>
+
+<%= link_to 'Retour', restaurants_path %>
